# contract-ai-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_enterprise_metadata.py
app/: main.py
app/api/: deps.py  routes.py
app/core/: config.py  errors.py  logging.py  metrics.py  middleware.py  rate_limit.py
app/graphs/: contract_graph.py
app/schemas/: contracts.py
app/services/: ai.py  clause_parser.py  comparison.py  contracts.py  jobs.py  metadata.py  pdf.py  risk_rules.py
app/storage/: contract_store.py  database.py  postgres_store.py  vector_store.py
app/ui/: api_client.py  streamlit_app.py
app/workers/: tasks.py
tests/: test_ai_service.py  test_api.py  test_clause_parser.py  test_contract_service.py  test_jobs.py  test_metadata.py  test_postgres_store.py  test_risk_rules.py  test_streamlit_api_client.py  test_vector_store.py
